[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Items/Grenade.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullets/Grenade.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 4

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.186047, 0.403101, 0.728682, 1 )
colors = PoolColorArray( 0.933594, 0.744562, 0.134933, 0.741176, 0.90625, 0.736328, 0.226562, 1, 0.921875, 0.408722, 0.230469, 1, 0.925781, 0.288177, 0.141037, 0.807843, 1, 0, 0, 0.52549 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0159091 ), -1.96643, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.5
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
angular_velocity = 180.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 500.0
damping_random = 1.0
angle = 180.0
angle_random = 1.0
scale = 7.0
scale_random = 0.5
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="CircleShape2D" id=15]
radius = 70.0

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 0.263636 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 0.995556 )
colors = PoolColorArray( 0.036, 0.36, 0.279, 1, 0.0470588, 0.466667, 0.247059, 1 )

[node name="Grenade" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 1 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
material = SubResource( 2 )
emitting = false
amount = 125
lifetime = 1.5
one_shot = true
explosiveness = 0.9
process_material = SubResource( 7 )

[node name="TimeoutTimer" type="Timer" parent="."]

[node name="LargeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LargeArea"]
shape = SubResource( 15 )

[node name="Node" type="Node" parent="."]

[node name="Line2D" type="Line2D" parent="Node"]
width_curve = SubResource( 16 )
gradient = SubResource( 17 )

[connection signal="body_entered" from="." to="." method="_on_Grenade_body_entered"]
[connection signal="timeout" from="TimeoutTimer" to="." method="_on_TimeoutTimer_timeout"]
[connection signal="body_entered" from="LargeArea" to="." method="_on_LargeArea_body_entered"]
[connection signal="body_exited" from="LargeArea" to="." method="_on_LargeArea_body_exited"]
